--- a/style.css
+++ b/style.css
@@ -357,20 +357,22 @@ footer p:nth-child(2)
 }
 
 .social a{
+    font-size: 1.5em;
     text-decoration: none;
     width: 45px;
     height: 45px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background:#f9004d;
+    /* background:#f9004d; */
     border-radius: 50px;
-    margin: 22px 10px;
-    color: white;
+    margin: 18px 8px;
+    color: #f9004d;
 }
 
 .social a:hover{
-    transform: scale(1.2);
+    background-color: transparent;
+    transform: scale(1.5);
     transition: 0.3s;
 }
 
@@ -381,11 +383,77 @@ footer p:nth-child(2)
     font-weight: bold;
 }
 .video{
-    border:10px solid grey;
-    width:350px;
-    height: 350px;
+    padding: 1px;
+    width:300px;
+    height: 169px;
     position: absolute;
     top: 27%;
     left: 8%;
     transform: translateX(170%);
+}
+.video1{
+    border:5px solid grey;
+    width:300px;
+    height: 169px;
+    position: absolute;
+    /* top: 27%;
+    left: 8%; */
+    transform: translateX(110%);
+}
+.video2{
+    border:5px solid grey;
+    width:300px;
+    height: 169px;
+    position: absolute;
+}
+.videop2{
+    /* border:5px solid grey; */
+    padding: 1px;
+    width:300px;
+    height: 169px;
+    position: absolute;
+    top: 27%;
+    left: 8%;
+    transform: translateY(90%);
+}
+.video3{
+    border:5px solid grey;
+    width:300px;
+    height: 169px;
+    position: absolute;
+    /* top: 27%;
+    left: 8%; */
+    transform: translatex(102%);
+    transition: all;
+}
+.video4{
+    border:5px solid grey;
+    width:300px;
+    height: 169px;
+    position: absolute;
+    transform: translatex(-8%);
+}
+.video1:hover{
+    border: 5px solid black;
+    box-shadow: 0 0 15px yellow;
+    width:298px;
+    height: 167.6px;
+}
+.video2:hover{
+    border: 5px solid black;
+    box-shadow: 0 0 15px yellow;
+    width:298px;
+    height: 167.6px;
+}
+.video3:hover{
+    border: 5px solid black;
+    box-shadow: 0 0 15px yellow;
+    width:298px;
+    height: 167.6px;
+}
+.video4:hover{
+    border: 5px solid black;
+    box-shadow: 0 0 15px yellow;
+    width:298px;
+    height: 167.6px;
 }
